build possibile anche su macOS (firmato)